[package]
name = "event-api"
version = "0.1.0"
authors = ["Jon Ole Killie <jon.ole@killie.org>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "event-api"
path = "src/bin.rs"

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
